--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "url": "https://github.com/erunion/showtimes/issues",
     "email": "jon@ursenba.ch"
   },
-  "main": "src/index.js",
+  "main": "src/index.jsx",
   "scripts": {
     "test": "tap test",
     "lint": "standard src/**.js test/**.js"
